minor doc tweak

--- a/README
+++ b/README
@@ -120,7 +120,7 @@ check to ``~/.bashrc`` to check for that condition.
 
    If you have suggested configuration mechanisms for other terminal
    emulators or other platforms, please post them in the comments and I
-   will add them to the documentation here.
+   will add them to this README file.
 
 References
 ==========
